[package]
name = "rust-web-prometheus-example"
version = "0.0.0"
authors = ["Pando85 <pando855@gmail.com>"]
rust-version = "1.74"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time"] }
warp = "0.3"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1"
futures = { version = "0.3", default-features = false }
rand = "0.8.5"
log = "0.4"
env_logger = "0.9"
